Fix paragraph block style contrast errors

--- a/css/uh-blocks/blocks.css
+++ b/css/uh-blocks/blocks.css
@@ -13,12 +13,16 @@
   background-color: #effffe;
   border: 1px solid #86e6ec;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); }
+  .is-style-uh-notice-general a {
+    color: #207AA7; }
 
 .is-style-uh-notice-warning {
   padding: 30px 20px;
   background-color: #fffdef;
   border: 1px solid #eaec86;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); }
+  .is-style-uh-notice-warning a {
+    color: #207AA7; }
 
 .is-style-uh-full-width-group {
   width: 100vw;
