--- a/sass/uh-blocks/_paragraph.scss
+++ b/sass/uh-blocks/_paragraph.scss
@@ -9,6 +9,10 @@ $warning-notice-border: #eaec86;
   background-color: $general-notice-green;
   border: 1px solid $general-notice-border;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+
+  a {
+		color: #207AA7;
+	}
 }
 
 .is-style-uh-notice-warning {
@@ -16,4 +20,8 @@ $warning-notice-border: #eaec86;
   background-color: $warning-notice-yellow;
   border: 1px solid $warning-notice-border;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+
+  a {
+		color: #207AA7;
+	}
 }
